# pyexample

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: periodic.yml  regression.yml  release.yml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  make.bat  modules.html  objects.inv  py-modindex.html  pyexample.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pyexample.doctree
docs/_sources/: modules.rst.txt
docs_src/: conf.py  index.rst  pyexample.rst
pyexample/: __init__.py  __main__.py  calc.py  logging.py
tests/: test___init__.py  test_calc.py  test_pyexample.py
