[tool.poetry]
name = "pyexample"
version = "0.1.0"
description = ""
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]

[tool.poetry.scripts]
pyexample = "pyexample.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
restructuredtext-lint = "^1.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.2.1"
sphinxcontrib-seqdiag = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
pytest-benchmark = "^3.4.1"

[tool.black]
line-length = 119

[tool.flake8]
extend-ignore = "E203,E501"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
