[tool.poetry]
name = "pyexample"
version = "0.2.0"
description = ""
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]

[tool.poetry.scripts]
pyexample = "pyexample.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
python-json-logger = "^3.3.0"
types-pytz = "^2025.2.0.20250326"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-benchmark = "^5.1.0"
restructuredtext-lint = "^1.4.0"
Sphinx = "^8.2.0"
setuptools = "^78.1.0"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-seqdiag = "^3.0.0"

[tool.black]
line-length = 119

[tool.flake8]
extend-ignore = "E203,E501"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
